--- a/ansible/master.yml
+++ b/ansible/master.yml
@@ -6,4 +6,6 @@
     - vars_files/telegraf.yml
 
   roles:
+    - role: influxdb
+#      influxdb_bind_hostname: "{{ ansible_hostname }}"
     - role: telegraf
