--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -1,9 +1,8 @@
 # vim:ft=yaml
 
-- hosts: all
-  gather_facts: False
-  become: true
+- name: Ensuring Python 2 is installed
+  raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+  changed_when: False
 
-  tasks:
-    - raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
-      changed_when: False
+- name: gather facts
+  setup:
