--- a/ansible/ids.yml
+++ b/ansible/ids.yml
@@ -3,13 +3,14 @@
 - hosts: all
   gather_facts: False
   become: true
-  vars_files:
-    - vars_files/telegraf.yml
-
 
   pre_tasks:
     - name: Bootstrap
-      include_tasks: bootstrap.yml
+      include_tasks: subtasks/bootstrap.yml
 
-  roles:
-    - role: telegraf
+  tasks:
+    - name: add influxDB apt repo
+      include_tasks: subtasks/influx_repo.yml
+
+    - name: setup telegraf
+      include_tasks: subtasks/telegraf_setup.yml
