--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -53,37 +53,37 @@
     - name: install apt-mirror, apache
       apt:
         name:
-          - apt-mirror
+          #- apt-mirror
           - apache2
         state: present
         update_cache: yes
 
-    - name: copy apt-mirror list
-      copy:
-        src: subtasks/apt-mirror/mirror.list
-        dest: /etc/apt/mirrors.list
-        mode: '0644'
-        owner: root
-        group: root
+    #- name: copy apt-mirror list
+      #copy:
+        #src: subtasks/apt-mirror/mirror.list
+        #dest: /etc/apt/mirrors.list
+        #mode: '0644'
+        #owner: root
+        #group: root
 
-    - name: sync apt-mirror
-      shell: apt-mirror
+    #- name: sync apt-mirror
+      #shell: apt-mirror
 
-    - name: symbolic link for ubuntu
-      file:
-        src: /var/spool/apt-mirror/mirror/archive.ubuntu.com/ubuntu/
-        dest: /var/www/html/ubuntu
-        owner: www-data
-        group: www-data
-        state: link
+    #- name: symbolic link for ubuntu
+      #file:
+        #src: /var/spool/apt-mirror/mirror/archive.ubuntu.com/ubuntu/
+        #dest: /var/www/html/ubuntu
+        #owner: www-data
+        #group: www-data
+        #state: link
 
-    - name: symbolic link for influx
-      file:
-        src: /var/spool/apt-mirror/mirror/repos.influxdata.com/ubuntu/
-        dest: /var/www/html/influx
-        owner: www-data
-        group: www-data
-        state: link
+    #- name: symbolic link for influx
+      #file:
+        #src: /var/spool/apt-mirror/mirror/repos.influxdata.com/ubuntu/
+        #dest: /var/www/html/influx
+        #owner: www-data
+        #group: www-data
+        #state: link
 
     - name: run apache
       service:
@@ -96,30 +96,30 @@
   hosts: all
   become: true
 
-  tasks:
-    - name: remove default debs
-      apt_repository:
-        repo: "{{ item }}"
-        state: absent
-      with_items:
-        - deb http://de.archive.ubuntu.com/ubuntu bionic main restricted
-        - deb http://de.archive.ubuntu.com/ubuntu bionic-security main restricted
-        - deb http://de.archive.ubuntu.com/ubuntu bionic-updates restricted
-        - deb-src http://de.archive.ubuntu.com/ubuntu bionic main restricted
-        - deb-src http://de.archive.ubuntu.com/ubuntu bionic-security main restricted
-        - deb-src http://de.archive.ubuntu.com/ubuntu bionic-updates restricted
+  #tasks:
+    #- name: remove default debs
+      #apt_repository:
+        #repo: "{{ item }}"
+        #state: absent
+      #with_items:
+        #- deb http://de.archive.ubuntu.com/ubuntu bionic main restricted
+        #- deb http://de.archive.ubuntu.com/ubuntu bionic-security main restricted
+        #- deb http://de.archive.ubuntu.com/ubuntu bionic-updates restricted
+        #- deb-src http://de.archive.ubuntu.com/ubuntu bionic main restricted
+        #- deb-src http://de.archive.ubuntu.com/ubuntu bionic-security main restricted
+        #- deb-src http://de.archive.ubuntu.com/ubuntu bionic-updates restricted
 
-    - name: add new deps
-      apt_repository:
-        repo: "{{ item }}"
-        state: absent
-      with_items:
-        - deb http://192.168.42.2/ubuntu bionic main restricted
-        - deb http://192.168.42.2/ubuntu bionic-security main restricted
-        - deb http://192.168.42.2/ubuntu bionic-updates restricted
-        - deb-src http://192.168.42.2/ubuntu bionic main restricted
-        - deb-src http://192.168.42.2/ubuntu bionic-security main restricted
-        - deb-src http://192.168.42.2/ubuntu bionic-updates restricted
+    #- name: add new deps
+      #apt_repository:
+        #repo: "{{ item }}"
+        #state: absent
+      #with_items:
+        #- deb http://192.168.42.2/ubuntu bionic main restricted
+        #- deb http://192.168.42.2/ubuntu bionic-security main restricted
+        #- deb http://192.168.42.2/ubuntu bionic-updates restricted
+        #- deb-src http://192.168.42.2/ubuntu bionic main restricted
+        #- deb-src http://192.168.42.2/ubuntu bionic-security main restricted
+        #- deb-src http://192.168.42.2/ubuntu bionic-updates restricted
 
 - name: setup influxdb, chronograf @ master
   gather_facts: False
