--- a/ansible/switch.yml
+++ b/ansible/switch.yml
@@ -1,6 +1,6 @@
 # vim:ft=yaml
 
-- hosts: all
+- hosts: switches
   gather_facts: False
   become: true
 
@@ -31,7 +31,25 @@
         port: "{{ item }}"
         state: present
       with_items:
-        - enp0s9
-        - enp0s10
+        #- enp0s9
+        #- enp0s10
         - enp0s16
-        - enp0s17
+        #- enp0s17
+        - enp0s18
+        #- enp0s19
+        #- enp2s0
+        #- enp2s1
+        #- enp2s2
+
+    - name: bring NICs up
+      raw: "ip link set {{ item }} up"
+      with_items:
+        #- enp0s9
+        #- enp0s10
+        - enp0s16
+        #- enp0s17
+        - enp0s18
+        #- enp0s19
+        #- enp2s0
+        #- enp2s1
+        #- enp2s2
