--- a/ansible/subtasks/influx_repo.yml
+++ b/ansible/subtasks/influx_repo.yml
@@ -1,6 +1,9 @@
+- name: add influx repo key
+  raw: curl -sL https://repos.influxdata.com/influxdb.key | sudo apt-key add -
+
 - name: add influx apt repository
   apt_repository:
-    repo: 'deb http://192.168.42.2/influx bionic stable'
+    repo: 'deb https://repos.influxdata.com/ubuntu bionic stable'
     state: present
     filename: influx
-    update_cache: yes
+    #update_cache: yes
