--- a/ansible/ids.yml
+++ b/ansible/ids.yml
@@ -14,3 +14,7 @@
 
     - name: setup telegraf
       include_tasks: subtasks/telegraf_setup.yml
+
+    - name: install snort
+      apt:
+        name: snort
