--- a/ansible/master.yml
+++ b/ansible/master.yml
@@ -9,44 +9,44 @@
       include_tasks: subtasks/bootstrap.yml
 
   tasks:
-    - name: add influxDB apt repo
-      include_tasks: subtasks/influx_repo.yml
+    #- name: add influxDB apt repo
+      #include_tasks: subtasks/influx_repo.yml
 
-    - name: setup telegraf
-      include_tasks: subtasks/telegraf_setup.yml
+    #- name: setup telegraf
+      #include_tasks: subtasks/telegraf_setup.yml
 
-    - name: install influx server
-      apt:
-        name: "{{ item }}"
-        state: present
-        update_cache: yes
-      with_items:
-        - influxdb
-        - chronograf
+    #- name: install influx server
+      #apt:
+        #name: "{{ item }}"
+        #state: present
+        #update_cache: yes
+      #with_items:
+        #- influxdb
+        #- chronograf
 
-    - name: Set telegraf output adress
-      ini_file:
-        path: /etc/influxdb/influxdb.conf
-        section: 'http'
-        option: bind-address
-        value: '"192.168.42.2:8086"'
-      register: influx_conf
+    #- name: Set telegraf output adress
+      #ini_file:
+        #path: /etc/influxdb/influxdb.conf
+        #section: 'http'
+        #option: bind-address
+        #value: '"192.168.42.2:8086"'
+      #register: influx_conf
 
 
-    - name: setup services
-      service:
-        name: "{{ item }}"
-        state: started
-        enabled: yes
-      with_items:
-        - influxdb
-        - chronograf
+    #- name: setup services
+      #service:
+        #name: "{{ item }}"
+        #state: started
+        #enabled: yes
+      #with_items:
+        #- influxdb
+        #- chronograf
 
-    - name: restart influx if reconfigured
-      service:
-        name: influxdb
-        state: restarted
-      when: influx_conf.changed
+    #- name: restart influx if reconfigured
+      #service:
+        #name: influxdb
+        #state: restarted
+      #when: influx_conf.changed
 
     - name: install pip3
       apt:
