--- a/ansible/fw.yml
+++ b/ansible/fw.yml
@@ -21,16 +21,6 @@
           - ruby
           - rsyslog
 
-    - name: install filewatcher
-      gem:
-        name: filewatcher
-        state: present
-
-    - name: install concurrent-ruby
-      gem:
-        name: concurrent-ruby
-        state: present
-
     #arch wiki ftw https://wiki.archlinux.org/index.php/Network_bridge
     - name: Enable ip forwarding
       raw: sh -c "echo 1 > /proc/sys/net/ipv4/ip_forward"
@@ -83,13 +73,33 @@
         repo: git@gitlab2.informatik.uni-wuerzburg.de:descartes/nfv-security/SecurityApplianceWrapper.git
         dest: SecurityApplianceWrapper
         key_file: .ssh/id_rsa
+
     - name: copy config
       copy:
         src: firewallwrapper.ini
         dest: wrapper.ini
-
       # Start wrapper
 
-    # git clone https://gitlab2.informatik.uni-wuerzburg.de/descartes/nfv-security/FireGuardian
-    # cd FireGuardian
+- name: Setup Firewall
+  hosts: sa2
+  gather_facts: False
+  become: false
+
+  tasks:
+    - name: clone repo
+      git:
+        repo: git@gitlab2.informatik.uni-wuerzburg.de:descartes/nfv-security/FireGuardian.git
+        dest: FireGuardian
+        key_file: .ssh/id_rsa
+
+    - name: install filewatcher
+      gem:
+        name: filewatcher
+        state: present
+
+    - name: install concurrent-ruby
+      gem:
+        name: concurrent-ruby
+        state: present
+
     # sudo ruby firewall.rb
