Move wrapper.ini into ids subfolder

--- a/ansible/ids.yml
+++ b/ansible/ids.yml
@@ -41,7 +41,7 @@
 
     - name: copy config
       copy:
-        src: idswrapper.ini
+        src: ids/wrapper.ini
         dest: wrapper.ini
       # Start wrapper
 
