temporarely use official influx repo

--- a/ansible/subtasks/influx_repo.yml
+++ b/ansible/subtasks/influx_repo.yml
@@ -3,7 +3,8 @@
 
 - name: add influx apt repository
   apt_repository:
-    repo: 'deb http://192.168.206.1/influx/ bionic stable'
+    #repo: 'deb http://192.168.206.1/influx/ bionic stable'
+    repo='deb https://repos.influxdata.com/ubuntu trusty stable' state=present
     state: present
     filename: influx
     update_cache: yes
